--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Coverage Check
         run: |
           go install github.com/mach6/go-covercheck/cmd/go-covercheck@latest
-          go-covercheck coverage.out -s 60 -b 50 -w \
+          go-covercheck coverage.out -s 60 -b 50 \
             --skip main.go \
             --skip color.go \
             --skip root.go
