--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Coverage Check
         run: |
-          go install github.com/mach6/go-covercheck/cmd/go-covercheck@latest
+          go install github.com/mach6/go-covercheck/cmd/go-covercheck@v0.3.0
           go-covercheck coverage.out -s 60 -b 50 \
             --skip main.go \
             --skip color.go \
