--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Coverage Check
         run: |
-          go install github.com/mach6/go-covercheck/cmd/go-covercheck@latest
-          go-covercheck coverage.out -s 60 -b 50 \
+          go install github.com/mach6/go-covercheck/cmd/go-covercheck@v0.3.0
+          go-covercheck coverage.out -s 65 -b 50 \
             --skip main.go \
             --skip color.go \
             --skip root.go
