--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -19,10 +19,15 @@ jobs:
         with:
           go-version: '1.24'
 
-      - name: Make dist artifacts
+      - name: Extract Tag and Set Version
+        run: |
+          TAG=${GITHUB_REF#refs/tags/}
+          echo $TAG > VERSION
+
+      - name: Make Dist
         run: make dist
 
-      - name: Upload binaries to GitHub Release
+      - name: Upload Dist Binaries to GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           files: dist/*
@@ -43,3 +48,16 @@ jobs:
           TAG=${GITHUB_REF#refs/tags/}
           docker tag go-covercheck:latest $IMAGE_NAME:$TAG
           docker push $IMAGE_NAME:$TAG
+
+      - name: Generate Changelog
+        run: |
+          go install github.com/git-chglog/git-chglog/cmd/git-chglog@latest
+          git-chglog -o CHANGELOG.md
+
+      - name: Commit and Push Changelog
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add CHANGELOG.md
+          git commit -m "chore: update changelog"
+          git push
