--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -63,5 +63,5 @@ jobs:
           git config --global user.email "actions@github.com"
           git add CHANGELOG.md
           git commit -m "chore: update changelog"
-          git checkout -b update_changelog_:${TAG#v}
-          git push origin update_changelog_:${TAG#v}
+          git checkout -b update_changelog_${TAG#v}
+          git push origin update_changelog_${TAG#v}
