--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,10 +33,7 @@ jobs:
       - name: Coverage Check
         run: |
           go install github.com/mach6/go-covercheck/cmd/go-covercheck@v0.4.0
-          go-covercheck coverage.out -s 65 -b 50 \
-            --skip main.go \
-            --skip color.go \
-            --skip root.go
+          go-covercheck coverage.out
 
       - name: Build Docker Image
         run: docker build -t go-covercheck .
