--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Coverage Check
         run: |
           go install github.com/mach6/go-covercheck/cmd/go-covercheck@v0.5.0
-          go-covercheck -C v0.4.1
+          go-covercheck coverage.out -C v0.4.1
 
       - name: Build Docker Image
         run: docker build -t go-covercheck .
