--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -14,6 +14,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install GitHub CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gh
+
+      - name: Set up Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
@@ -56,17 +66,35 @@ jobs:
           go install github.com/git-chglog/git-chglog/cmd/git-chglog@latest
           git-chglog -o CHANGELOG.md
 
-      - name: Update Homebrew Formula
+      - name: Update Homebrew Formula in homebrew-tap
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           TAG=${GITHUB_REF#refs/tags/}
           VERSION=${TAG#v}
-          
-          # Get SHA256 of the new release tarball
           SHA256=$(curl -sL https://github.com/mach6/go-covercheck/archive/refs/tags/${TAG}.tar.gz | sha256sum | cut -d' ' -f1)
-          
+
+          # Clone the tap repo
+          git clone https://github.com/mach6/homebrew-tap.git
+          cd homebrew-tap
+
           # Update the formula
-          sed -i "s|url \".*\"|url \"https://github.com/mach6/go-covercheck/archive/refs/tags/${TAG}.tar.gz\"|" homebrew/go-covercheck.rb
-          sed -i "s|sha256 \".*\"|sha256 \"${SHA256}\"|" homebrew/go-covercheck.rb
+          sed -i "s|url \".*\"|url \"https://github.com/mach6/go-covercheck/archive/refs/tags/${TAG}.tar.gz\"|" go-covercheck/go-covercheck.rb
+          sed -i "s|sha256 \".*\"|sha256 \"${SHA256}\"|" go-covercheck/go-covercheck.rb
+
+          # Commit and push changes
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git checkout -b update-go-covercheck-${TAG}
+          git add go-covercheck/go-covercheck.rb
+          git commit -m "Update go-covercheck formula for ${TAG}"
+          git push origin update-go-covercheck-${TAG}
+
+          # Create a PR using gh CLI
+          gh pr create --title "Update go-covercheck formula for ${TAG}" \
+            --body "Automated update for go-covercheck ${TAG}" \
+            --head update-go-covercheck-${TAG} \
+            --base main
 
       - name: Commit and Push Changelog As Branch
         run: |
