--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -83,8 +83,6 @@ jobs:
           sed -i "s|sha256 \".*\"|sha256 \"${SHA256}\"|" go-covercheck/go-covercheck.rb
 
           # Commit and push changes
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
           git checkout -b update-go-covercheck-${TAG}
           git add go-covercheck/go-covercheck.rb
           git commit -m "Update go-covercheck formula for ${TAG}"
@@ -99,9 +97,13 @@ jobs:
       - name: Commit and Push Changelog As Branch
         run: |
           TAG=${GITHUB_REF#refs/tags/}
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
           git add CHANGELOG.md homebrew/go-covercheck.rb
-          git commit -m "chore: update changelog and homebrew formula for ${TAG}"
+          git commit -m "chore: update changelog for ${TAG}"
           git checkout -b update_changelog_${TAG#v}
           git push origin update_changelog_${TAG#v}
+
+          # Create a PR using gh CLI
+          gh pr create --title "chore: update changelog for ${TAG}" \
+            --body "Automated update to changelog for ${TAG}" \
+            --head update_changelog_${TAG#v} \
+            --base main
